--- a/_config.yml
+++ b/_config.yml
@@ -1,1 +1,3 @@
 theme: jekyll-theme-cayman
+title: SCRUD
+description: Search, Create, Read, Update and Delete buttons with functionality for any CMS website
